frontend last commit

--- a/templates/core/about.html
+++ b/templates/core/about.html
@@ -16,6 +16,12 @@
                         electric vehicle can convert the parking time into a productive time by charging their vehicle
 
                     </p>
+            <p class="about">
+                Additional payment is collected if the customer need to clean their vehicles manually.
+                The parking time can be selected by the customers using this application.The electric vehicle owners will be able to park their 
+                vehicles in specific slots so that they can convert their parking time into charging time
+            </p>
+           
                     
 
 
@@ -23,6 +29,5 @@
             </div>
         </div>
     </div>
-</div>
-</body>
+</div><br>
 {% endblock content %}
