--- a/static/css/style.css
+++ b/static/css/style.css
@@ -23,6 +23,8 @@
 
 
 
+
+
 /* button book tickets */
 .btns{
     
@@ -54,6 +56,12 @@
 
 /* home page title */
 
+.bg-home{
+    background-image: url(img_home.jpg);
+    background-size:cover;
+     
+ }
+
 .space4u{
     font-size: 50px;
     color: rgb(0, 30, 87);
@@ -76,6 +84,12 @@
    
 }
 
+/* cardhome */
+
+.bg-cardhome{
+    background-image: url(img24.jpg);
+    background-size: cover;
+}
 
 
 /* hero section start */
@@ -134,7 +148,7 @@
 
 
 .cs{
-    background-image: url(img23.jpg);
+    background-image: url(img_white.jpg);
     background-size: cover;
     
 }
@@ -144,14 +158,15 @@
 /* about */
 
 .bg-about{
-    background-image: url(img_about.jpg);
+    background-image: url(img23.jpg);
     background-size: cover;
 }
 
+
 .about{
-    color: aliceblue;
+    color: rgba(32, 22, 22, 0.822);
     justify-content: center;
-    font-size: 20px;
+    font-size: 18px;
     
 }
 
@@ -193,11 +208,61 @@
 .slot{
     font-size: 30px;
 }
-.bg-slot{
-    background-image: url(img_slot.jpg);
-    background-size: cover;
-}
+
 .bg-booking{
-    background-image: url(img_booking.jpg);
+    
+   background-image: url(img_booking.jpg);
+   background-size: cover;
+}
+
+.bg-slot{
+   background-image: url(img_slot.jpg);
+   background-size:cover;
+    
+}
+
+/* footer */
+
+.footer{
+    background-color: rgba(92, 92, 161, 0.603);
+    color: aliceblue;
+
+}
+
+/* feedback */
+
+.bg-feedcard{
+    background-image: url(img_name.png);
+    background-size:cover;
+    
+}
+
+.bg-feedname{
+    background-color: rgb(46, 72, 105);
+    color: aliceblue;
+
+}
+
+.bg-feedback{
+    background-image:url(img_feedback.jpg)
+}
+
+.bg-feedcreate{
+    background-image: url(img26.jpg);
     background-size: cover;
 }
+
+.bg-feedcardbox{
+    background-image: url(img25.jpg);
+    background-size: cover;
+}
+
+
+
+
+
+
+
+
+
+
