--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -37,9 +37,7 @@
     </button>
   </div>
 </section>
-
-
-
+<body class="bg-home">
 <section class="vh-100">
   <div class="container h-100 py-2">
     <div class="row">
@@ -66,7 +64,7 @@
           <div class="col">
             <div class="card h-100">
               <img src="media/default/img_stadium.jpg" class="card-img-top" height="200px" alt="">
-              <div class="card-body">
+              <div class="card-body bg-cardhome">
                 <h5 class="card-title"><strong>Kaloor stadium</strong></h5>
                 <p class="card-text">Location : Edappally,Ernakulam</p>
                 <p class="card-text"><i>Hey!Ensure your tickets now</i></p>
@@ -78,7 +76,7 @@
           <div class="col">
             <div class="card h-100">
               <img src="media/default/img_csm2.jpg" class="card-img-top" height="200px" alt="">
-              <div class="card-body">
+              <div class="card-body bg-cardhome">
                 <h5 class="card-title"><strong>Center Square Mall</strong> </h5>
                 <p class="card-text">Location : Maharajas,Ernakulam</p>
                 <p class="card-text"><i>Hey!Ensure your tickets now</i></p>
@@ -90,7 +88,7 @@
           <div class="col">
             <div class="card h-100">
               <img src="media/default/img_oberon.jpg" class="card-img-top" height="200px" alt="">
-              <div class="card-body">
+              <div class="card-body  bg-cardhome">
                 <h5 class="card-title"><strong>Oberon Mall</strong> </h5>
                 <p class="card-text">Location : Edappally,Ernakulam</p>
                 <p class="card-text"><i>Hey!Ensure your tickets now</i></p>
@@ -102,7 +100,7 @@
           <div class="col">
             <div class="card h-100">
               <img src="media/default/img_lulu2.jpg" class="card-img-top" height="200px" alt="">
-              <div class="card-body">
+              <div class="card-body  bg-cardhome">
                 <h5 class="card-title"><strong> Lulu Mall</strong> </h5>
                 <p class="card-text">Location : Edappally,Ernakulam </p>
                 <p class="card-text"><i>Hey!Ensure your tickets now</i></p>
@@ -114,7 +112,7 @@
           <div class="col">
             <div class="card h-100">
               <img src="media/default/img_marine1.jpg" class="card-img-top" height="200px" alt="">
-              <div class="card-body">
+              <div class="card-body  bg-cardhome">
                 <h5 class="card-title"><strong>Marine Drive</strong> </h5>
                 <p class="card-text">Location : Maharajas,Ernakulam </p>
                 <p class="card-text"><i>Hey!Ensure your tickets now</i></p>
@@ -126,7 +124,7 @@
           <div class="col">
             <div class="card h-100">
               <img src="media/default/img_park1.jpg" class="card-img-top" height="200px" alt="">
-              <div class="card-body">
+              <div class="card-body bg-cardhome">
                 <h5 class="card-title"><strong>Subash Park</strong> </h5>
                 <p class="card-text">Location : Maharajas,Ernakulam </p>
                 <p class="card-text"><i>Hey!Ensure your tickets now</i></p>
@@ -135,18 +133,9 @@
             </div>
           </div>
         </div>
-        
-
-
-
       </div>
-
-
-      
-
       </div>
-    </div>
-  </div>
 </section>
+</body><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 {% endblock content%}
