--- a/templates/core/location.html
+++ b/templates/core/location.html
@@ -145,8 +145,12 @@
                       <div class="card-body cs">
                         <h3 class="card-title text-center titles">MYSORE</h3>
                         <p class="card-text text-center ensure ">Come.. Ensure your Space!</p>
-                      </div>
-                      <button class="btn btn-primary btn-select">SELECT</button>
+                      
+                      <div class="text-center">
+                      <a href="{% url 'core:time' %}">
+                      <button class="btn btn-primary btn-select">SELECT</button></a>
+                    </div>
+                    </div>
                     </div>
                   </div>
 
@@ -169,5 +173,5 @@
     </div>
 </div>
 
-</body>
+</body><br>
 {% endblock content %}
