--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -22,7 +22,11 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link color" href="#">Feedback</a>
+          <a class="nav-link color" href="{% url 'core:profile' %}">Profile</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link color" href="{% url 'core:feedback_list' %}">Review</a>
         </li>
 
         <li class="nav-item">
