--- a/templates/core/booking/detail.html
+++ b/templates/core/booking/detail.html
@@ -1,17 +1,25 @@
 {% extends 'base.html' %}
 {% block content %}
-<section>
-    <div class="container d-flex">
-        <div class="row d-flex justify-content-center align-items-center">
+<section class="vh-100 d-flex bookingdetails">
+    <div class="container d-flex justify-content-center align-items-center">
+        <div class="row">
             <div class="col">
-                <h3>Booking Details</h3>
+                <h3 class="text-center">Booking Details</h3>
                 <hr>
-                <div class="card">
-                    <div class="card-body">
-                        
-
+                <div class="card text-center booking">
+                    <div class="card-header">
+                      About your Vehicle
                     </div>
-                </div>
+                    <div class="card-body ">
+                      <p class="card-text">Vehicle number : <strong>{{booking.vehicle}}</strong></p>
+                      <p class="card-text">Arrival date and time : {{booking.arrival_date}}</p>
+                      <p class="card-text">Departure date and time : {{booking.departure_date}}</p>
+                      <p class="card-text"><h4>Destination : {{booking.destination}}</h4></p>
+                      <a href="{% url 'core:booking_payment' booking.id %}" class="btn btn-success">Pay Now</a>
+
+                    
+                    </div>
+                   
 
             </div>
         </div>
