--- a/templates/core/booking/form.html
+++ b/templates/core/booking/form.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %} {% block content %}
-<section class="vh-100 d-flex ">
+<section class="vh-100 d-flex bg-login">
   <div class="container d-flex justify-content-center align-items-center">
     <div class="row">
       <div class="col">
