--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} {% block content %}
 
-<section class="hero-section">
+<section class="hero-section" style="min-height:100vh;">
   <div
     id="carouselExampleControls"
     class="carousel slide h-100"
@@ -37,8 +37,8 @@
     </button>
   </div>
 </section>
-<body class="bg-home">
-<section class="vh-100">
+
+<section class="vh-100 bg-home">
   <div class="container h-100 py-2">
     <div class="row">
       
@@ -59,83 +59,14 @@
             Recommended places
           </p>
         </div>
+        
 
-        <div class="row row-cols-1 row-cols-md-3 g-4">
-          <div class="col">
-            <div class="card h-100">
-              <img src="{{place.image.url}}" class="card-img-top" height="200px" alt="">
-              <div class="card-body bg-cardhome">
-                <h5 class="card-title"><strong></strong></h5>
-                <p class="card-text">Location : </p>
-                <p class="card-text"><i>Hey!Ensure your tickets now</i></p>
-                <a href="#"><button class="btn btn-primary">Book Tickets</button></a>
-              </div>
-            </div>
-          </div>
+        
 
-          <!-- <div class="col">
-            <div class="card h-100">
-              <img src="media/default/img_csm2.jpg" class="card-img-top" height="200px" alt="">
-              <div class="card-body bg-cardhome">
-                <h5 class="card-title"><strong>Center Square Mall</strong> </h5>
-                <p class="card-text">Location : Maharajas,Ernakulam</p>
-                <p class="card-text"><i>Hey!Ensure your tickets now</i></p>
-                <a href="#' %}"><button class="btn btn-primary">Book Tickets</button></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card h-100">
-              <img src="media/default/img_oberon.jpg" class="card-img-top" height="200px" alt="">
-              <div class="card-body  bg-cardhome">
-                <h5 class="card-title"><strong>Oberon Mall</strong> </h5>
-                <p class="card-text">Location : Edappally,Ernakulam</p>
-                <p class="card-text"><i>Hey!Ensure your tickets now</i></p>
-                <a href="#"><button class="btn btn-primary">Book Tickets</button></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card h-100">
-              <img src="media/default/img_lulu2.jpg" class="card-img-top" height="200px" alt="">
-              <div class="card-body  bg-cardhome">
-                <h5 class="card-title"><strong> Lulu Mall</strong> </h5>
-                <p class="card-text">Location : Edappally,Ernakulam </p>
-                <p class="card-text"><i>Hey!Ensure your tickets now</i></p>
-                <a href="#"><button class="btn btn-primary">Book Tickets</button></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card h-100">
-              <img src="media/default/img_marine1.jpg" class="card-img-top" height="200px" alt="">
-              <div class="card-body  bg-cardhome">
-                <h5 class="card-title"><strong>Marine Drive</strong> </h5>
-                <p class="card-text">Location : Maharajas,Ernakulam </p>
-                <p class="card-text"><i>Hey!Ensure your tickets now</i></p>
-                <a href="#"><button class="btn btn-primary">Book Tickets</button></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card h-100">
-              <img src="media/default/img_park1.jpg" class="card-img-top" height="200px" alt="">
-              <div class="card-body bg-cardhome">
-                <h5 class="card-title"><strong>Subash Park</strong> </h5>
-                <p class="card-text">Location : Maharajas,Ernakulam </p>
-                <p class="card-text"><i>Hey!Ensure your tickets now</i></p>
-                <a href="#"><button class="btn btn-primary">Book Tickets</button></a>
-              </div>
-            </div>
-          </div> -->
         </div>
       </div>
-      </div>
+      
 </section>
-</body><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+</body>
 
 {% endblock content %}
