--- a/templates/core/payment.html
+++ b/templates/core/payment.html
@@ -1,62 +1,110 @@
-{% extends 'base.html' %} {% block content %}
-<body class="bg-payment">
-<div class="container py-5">
-    <div class="position-relative m-4">
-      <div class="progress" style="height: 1px">
-        <div
-          class="progress-bar"
-          role="progressbar"
-          aria-label="Progress"
-          style="width: 0%"
-          aria-valuenow="50"
-          aria-valuemin="0"
-          aria-valuemax="100"
-        ></div>
+{% extends 'base.html' %}
+
+{% block content %}
+<!-- end breadcrumb section -->
+<section class="vh-100 d-flex" style="min-height:100vh;">
+<div class="container justify-content-center align-items-center">
+  <div class="row">
+    <div class="col">
+      <div class="card">
+        <div class="card-body ">
+          <form action="" method="post" id="paymentForm">
+            {% csrf_token %}
+            <table class=" table table-stripped">
+              <thead></thead>
+              <tbody>
+                <tr>
+                  <th>Order ID:</th>
+                  <td>{{razorpay_order_id}}</td>
+                </tr>
+                <tr>
+                  <th>Order Amount:</th>
+                  <td>{{razorpay_currency}} {{razorpay_amount}}</td>
+                  <input type="hidden" name="razorpay_amount" value="{{razorpay_amount}}">
+                </tr>
+              </tbody>
+            </table>
+            <button id="rzp-button1" class="btn btn-primary">
+              Pay
+            </button>
+          </form>
+        </div>
       </div>
-      <button
-        type="button"
-        class="position-absolute top-0 start-0 translate-middle btn btn-sm btn-primary rounded-pill"
-        style="width: 2rem; height: 2rem"
-      >
-        1<p class="text-muted p-2"><b>Payment</b></p>
-      </button>
-      
-      <button
-        type="button"
-        class="position-absolute top-0 start-100 translate-middle btn btn-sm btn-secondary rounded-pill"
-        style="width: 2rem; height: 2rem"
-      >
-        2<p class="text-muted p-2"><b>Parking details</b></p>
-      </button>
     </div>
-
-    <div class="container py-5 font-5">
-      <table class="table">
-          <tbody>
-              <tr>
-                  <td><strong><h2>Select Payment Methods</h2></strong></td>
-                  <td class="text-end"> 100% SAFE PAYMENTS</td>
-              </tr>
-          </tbody>
-      </table>
-
-    <section>
-    <div class="container text-center">
-     
-      <div>
-        <a class="btn btn-primary btn-lg" href="#" role="button">Razorpay</a>
-        <a class="btn btn-secondary btn-lg" href="#" role="button">Net Banking</a>
-
-       
-      </div>
-      
-    </div>
-  </div>
-  </section>
-
-  
-    
   </div>
 </div>
-</body>
-  {% endblock content %}
+</section>
+<script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+<script>
+  const csrftoken = document.querySelector("[name=csrfmiddlewaretoken]").value;
+  const paymentForm = document.getElementById("paymentForm");
+  function appendDataToForm(form, data) {
+    for (const key in data) {
+      value = data[key];
+      input = document.createElement("input");
+      input.setAttribute("type", "hidden");
+      input.setAttribute("name", key);
+      input.setAttribute("value", value);
+      form.appendChild(input);
+    }
+    console.log(form);
+    return form.submit();
+  }
+  var options = {
+    key: "{{razorpay_merchant_key}}",
+    amount: "{{razorpay_amount}}",
+    currency: "{{razorpay_currency}}",
+    name: "Space4U",
+    description: "Test Transaction",
+    image: "",
+
+    // callback_url: "{{ razorpay_callback_url }}",
+    order_id: "{{razorpay_order_id}}",
+
+    handler: function (response) {
+      let URL = "{{ razorpay_callback_url }}";
+      let params = {
+        razorpay_payment_id: response.razorpay_payment_id,
+        razorpay_order_id: response.razorpay_order_id,
+        razorpay_signature: response.razorpay_signature,
+      };
+
+      appendDataToForm(paymentForm, params);
+
+      alert(response.razorpay_payment_id);
+      alert(response.razorpay_order_id);
+      alert(response.razorpay_signature);
+      alert("Successfull...");
+    },
+
+    prefill: {
+      name: "{{user.profile.first_name}}",
+      email: "{{user.email}}",
+      contact: "{{user.profile.phone_number}}",
+    },
+    notes: {
+      address: "Razorpay Corporate Office",
+    },
+    theme: {
+      color: "#3399cc",
+    },
+  };
+
+  var rzp1 = new Razorpay(options);
+
+  rzp1.on("payment.failed", function (response) {
+    alert(response.error.code);
+    alert(response.error.description);
+    alert(response.error.source);
+    alert(response.error.step);
+    alert(response.error.reason);
+    alert(response.error.metadata.order_id);
+    alert(response.error.metadata.payment_id);
+  });
+  document.getElementById("rzp-button1").onclick = function (e) {
+    rzp1.open();
+    e.preventDefault();
+  };
+</script>
+
+{% endblock content %}
