--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -9,7 +9,7 @@
           <form action="" method="post">
             {% csrf_token %} {{form.as_p}}
             <div class="d-flex justify-content-between mb-3">
-              <a href="" class="link-danger">Forgot Password?</a>
+              <a href="{% url 'password_reset' %}" class="link-danger">Forgot Password?</a>
               <a href="{% url 'user:user_signup' %}" class="link-primary">Create Account?</a>
             </div>
             <button class="btn btn-primary">Login</button>
