--- a/templates/core/destination/list.html
+++ b/templates/core/destination/list.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %} {% block content %}
-<body class="bg-des">
+<section class="bg-destination">
   <div class="row row-cols-1 row-cols-md-3 g-4">
     {% for destination in destinations %}
  
     <a href="{% url 'core:booking_create' destination.id %}" class="underline">
-      <div class="card">
+      <div class="card"  style="height: 450px;">
         {% for image in destination.image.all %}
           <img src="{{image.file.url}}" class="card-img-top" height="200px" alt="">
           {% endfor %}
@@ -24,6 +24,6 @@
     </div>
     {% endfor %}
   </div>
-</body><br>
+</section><br>
 
 {% endblock content %}
