--- a/templates/core/destination/list.html
+++ b/templates/core/destination/list.html
@@ -20,7 +20,7 @@
     
     {% empty %}
     <div class="col">
-      <p>no destinations!</p>
+      <p>No Destinations!</p>
     </div>
     {% endfor %}
   </div>
